# summon

./: .gitignore  .gitmodules  .hc  ARCHITECTURE.md  CHECKOUT.md  CLAUDE.md  CLONING.md  Cargo.toml  NEWCARTPROFILESYSTEM.md  PREFERENCES.md  PRODUCTSCLONING.md  README.md  package-lock.json  package.json  store_file  store_file-shm
backend/: extract_milks.cjs  fetch_kroger_data.js  index.js  package-lock.json  package.json
backend/manual_task_scripts/: count_categorized.js
backend/output/: kroger_fetch_log_27490.txt
backend/scripts/: cleanup_product_json.js  fetch_kroger_data.js  process_daily_updates.js
product-categorization/: add_negative_example.py  ai_categorizer.py  api_categorizer.js  categories.json  categorize-batch.js  categorized_products.json  categorized_products_sorted.json  category_constraints.py  convert_failures.py  correction_map.json  countProductDataTypes.js  create_subcategories.py  dual_bridge.py  dual_categories.py  dual_category_mappings.json  failed_categorizations.jsonl  fix_categories.py  generate_product_embeddings.py  kroger_mappings.py  mapping_issues.jsonl  near_miss_analyzer.py  negative_examples.json  package-lock.json  package.json  rebuild_index.py  reported_categorizations.jsonl  test.py  threshold_issues.jsonl  training_data.json
ui/: .gitignore  REFACTORING.md  check-results.txt  check_log.txt  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: AllProductsGrid.svelte  App.svelte  CategoryReportsAdmin.svelte  CategorySidebar.svelte  Controller.svelte  HeaderContainer.svelte  (+20 more)
workdir/: happ.yaml  summon.happ
(+179 files in other folders)
